html cssの変更、画像追加

--- a/index.html
+++ b/index.html
@@ -10,45 +10,65 @@
 </head>
 
 <body>
-  <header id="id">
-    <h1 class="site-title"><a href="index.html">PHOTO ROOM</a></h1>
-  </header>
+  <div class="container">
+    <header id="header">
+      <h1 class="site-title"><a href="index.html">PHOTO ROOM</a></h1>
+    </header>
 
-  <main>
-    <div id="mainvisual">
-      <img src="" alt="">
-    </div>
+    <main>
+      <div id="mainvisual">
+        <img src="images/lse.jpg" alt="">
+      </div>
 
-    <div>
-      <section id="index" class="wrapper">
-        <h2 class="sec-title">INDEX</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ullam perspiciatis sit esse explicabo perferendis iste dolor asperiores dolores? Ipsum possimus ex non cupiditate, ducimus amet consectetur expedita quam asperiores!</p>
-      </section>
+      <div class="inner">
+        <section id="index">
+          <h2 class="section-title">INDEX</h2>
+          <div class="index-inner">
+            <ol class="index-list">
+              <li>texttexttexttexttexttexttexttexttexttexttexttexttexttext</li>
+              <li>texttexttexttexttexttexttexttexttexttexttexttexttexttext</li>
+              <li>texttexttexttexttexttexttexttexttexttexttexttexttexttext</li>
+              <li>texttexttexttexttexttexttexttexttexttexttexttexttexttext</li>
+              <li>texttexttexttexttexttexttexttexttexttexttexttexttexttext</li>
+            </ol>
+          </div>
+        </section>
 
-      <ul>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-      </ul>
+        <ul class="list">
+          <li><img src="images/carlton.jpg" alt=""></li>
+          <li><img src="images/sea.jpg" alt=""></li>
+          <li><img src="images/finder.jpg" alt=""></li>
+          <li><img src="images/lv.jpg" alt=""></li>
+        </ul>
 
-      <section id="detail" class="wrapper">
-        <h2 class="sec-title">DETAIL</h2>
-        <dl>
-          <dt>Photographer: Aknmoon</dt>
-          <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</dd>
-          <dt>Location: Melborne</dt>
-          <dd>Quod corporis reprehenderit quae, obcaecati similique dicta.</dd>
-          <dt>Shooting Date: 2023年4月24日</dt>
-          <dd>Voluptates suscipit ipsam nihil, aspernatur non a laboriosam.</dd>
-        </dl>
-      </section>
-    </div>
-  </main>
+        <section id="detail">
+          <h2 class="section-title">DETAIL</h2>
+          <div class="flex">
+            <dl>
+              <dt>Photographer: Aknmoon</dt>
+              <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</dd>
+              <dt>Location: Melborne</dt>
+              <dd>Quod corporis reprehenderit quae, obcaecati similique dicta.</dd>
+              <dt>Shooting Date: 2023年4月24日</dt>
+              <dd>Voluptates suscipit ipsam nihil, aspernatur non a laboriosam.</dd>
+            </dl>
+            <div class="text">
+              <p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+              <p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+              <p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+              <p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+              <p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+              <p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p><p>texttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+              <a href="#" class="link">Online Store</a>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
 
-  <footer id="footer">
-    <p>&copy;2023 My Work</p>
-  </footer>
-  
+    <footer id="footer">
+      <p>&copy;2023 My Work</p>
+    </footer>
+  </div>
 </body>
 </html>
